update hover course

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <h1>Do you want to become an expert pilot ?</h1>
             </div>
             <h1>Start your Career with us</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque suscipit placeat incidunt temporibus eaque consequuntur ab iste,</p>
+            <p>The pilot skillfully navigated the turbulent skies, ensuring a safe and smooth flight for all passengers on board.</p>
         </div>
         <div class="hero-bg">
 
@@ -95,7 +95,7 @@
             <div class="work-img">
                 
             </div>
-            <div class="work-def">
+            <div class="work-def w1">
                 <h4>COMMERCIAL PILOT</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur libero quo ex iure molestiae enim exercitationem eum sapiente</p>
             </div>
@@ -148,6 +148,7 @@
             </div>
             <div class="bot">
                 <p>Web Developer Class with Mr.Fajar Baskoro</p>
+                <p>RafiSutrisno</p>
                 <p><span>Informatics Engginering ITS</span></p>
             </div>
         </div>
