update media only screen

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <footer id="contact">
         <div class="right">
             <div class="top">
-                <h1>Flying Academy</h1>
+                <h1 class="fly">Flying Academy</h1>
                 <div class="a-flex">
                     <a href="https://www.linkedin.com/in/rafisutrisno/"><div class="azone az1"></div></a>
                     <a href="https://github.com/Rafi-Sutrisno"><div class="azone az2"></div></a>
